<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ConfigScreenActivity">

    <RadioGroup
        android:id="@+id/difficultySelector"
        android:layout_width="113dp"
        android:layout_height="145dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenSpriteDisplay">

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_button_placeholder" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_button_placeholder" />

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_button_placeholder" />
    </RadioGroup>

    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/begin_button_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNameInput" />

    <EditText
        android:id="@+id/playerNameInput"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/player_name_input_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultySelector" />

    <ImageView
        android:id="@+id/chosenSpriteDisplay"
        android:layout_width="141dp"
        android:layout_height="122dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/sprite_select_display_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dwarf_m_idle_anim" />

    <ImageButton
        android:id="@+id/spriteChoosePrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sprite_select_prev_description"
        app:layout_constraintBottom_toBottomOf="@+id/chosenSpriteDisplay"
        app:layout_constraintEnd_toStartOf="@+id/chosenSpriteDisplay"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chosenSpriteDisplay"
        app:layout_constraintVertical_bias="0.732"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/spriteChooseNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sprite_select_next_description"
        app:layout_constraintBottom_toBottomOf="@+id/chosenSpriteDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chosenSpriteDisplay"
        app:layout_constraintTop_toTopOf="@+id/chosenSpriteDisplay"
        app:layout_constraintVertical_bias="0.732"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <TextView
        android:id="@+id/configErrorMessageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>